--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.87.0",
+    "axios": "^1.11.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
